src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBTextureView_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTextureView_StringErrorContext.class */
public final class ARBTextureView_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTextureView(IIIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureViewErrorContext");
        return methods;
    }
}
